style(common): doc文档修改
ctmobile-ui的docs中加入CTSJ-STATE的项目链接

--- a/ctmobile-ui/index.html
+++ b/ctmobile-ui/index.html
@@ -42,6 +42,7 @@
         <li><a target="_blank" href="https://github.com/playerljc/CTMobile-React">CTMobile-React</a></li>
         <li><a target="_blank" href="https://github.com/playerljc/CTMobile-Vue">CTMobile-Vue</a></li>
         <li><a target="_blank" href="https://github.com/playerljc/CTSJ-BUILD">CTSJ-BUILD</a></li>
+        <li><a target="_blank" href="https://github.com/playerljc/CTSJ-STATE">CTSJ-STATE</a></li>
       </ul>
     </div>
     <div class="footer-item">
