style(common): doc文档修改
ctmobile-ui的docs加入loading

--- a/ctmobile-ui/index.html
+++ b/ctmobile-ui/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>CTMobile-UI-DOC</title>
+  <link rel="stylesheet" href="../components/globalindicator/globalindicator.css">
   <link rel="stylesheet" href="index.css">
+  <script src="../components/globalindicator/globalindicator.js"></script>
   <script src="index.js"></script>
 </head>
 <body>
