--- a/ctmobile-ui/html/CascadeCompared/index.html
+++ b/ctmobile-ui/html/CascadeCompared/index.html
@@ -4,7 +4,7 @@
   <meta charset=utf-8>
   <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no,minimal-ui,viewport-fit=cover">
   <title>ctmobile-ui-cascadecompared-demo</title>
-<link href=/playerljc.github.io/ctmobile-ui/html/CascadeCompared/vendors.css?21066cf4e1f0cd15b620 rel=stylesheet><link href=/playerljc.github.io/ctmobile-ui/html/CascadeCompared/index.css?21066cf4e1f0cd15b620 rel=stylesheet></head>
+<link href=/ctmobile-ui/html/CascadeCompared/vendors.css?21066cf4e1f0cd15b620 rel=stylesheet><link href=/ctmobile-ui/html/CascadeCompared/index.css?21066cf4e1f0cd15b620 rel=stylesheet></head>
 
 <body>
 
