--- a/ctmobile-ui/html/FontSizeSetting/index.html
+++ b/ctmobile-ui/html/FontSizeSetting/index.html
@@ -4,7 +4,7 @@
   <meta charset=utf-8>
   <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no,minimal-ui,viewport-fit=cover">
   <title>ctmobile-ui-fontsizesetting-demo</title>
-<link href=/playerljc.github.io/ctmobile-ui/html/FontSizeSetting/vendors.css?815236607aeb36c6fede rel=stylesheet><link href=/playerljc.github.io/ctmobile-ui/html/FontSizeSetting/index.css?815236607aeb36c6fede rel=stylesheet></head>
+<link href=/ctmobile-ui/html/FontSizeSetting/vendors.css?815236607aeb36c6fede rel=stylesheet><link href=/ctmobile-ui/html/FontSizeSetting/index.css?815236607aeb36c6fede rel=stylesheet></head>
 
 <body>
 
