--- a/ctmobile-ui/html/ImageViewer/index.html
+++ b/ctmobile-ui/html/ImageViewer/index.html
@@ -4,7 +4,7 @@
   <meta charset=utf-8>
   <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no,minimal-ui,viewport-fit=cover">
   <title>ctmobile-ui-imageviewer-demo</title>
-<link href=/playerljc.github.io/ctmobile-ui/html/ImageViewer/vendors.css?e8eae1c5bac944de9962 rel=stylesheet><link href=/playerljc.github.io/ctmobile-ui/html/ImageViewer/index.css?e8eae1c5bac944de9962 rel=stylesheet></head>
+<link href=/ctmobile-ui/html/ImageViewer/vendors.css?e8eae1c5bac944de9962 rel=stylesheet><link href=/ctmobile-ui/html/ImageViewer/index.css?e8eae1c5bac944de9962 rel=stylesheet></head>
 
 <body>
 
@@ -140,12 +140,12 @@ document.getElementById('photo2').addEventListener('click', () => {
     <div class=with-device-view>
       <div class=ctmobile-ui-doc-demo-device>
         <div class=ctmobile-ui-doc-demo-device-inner>
-          
+
           <ul class=photoWrap>
             <li id=photo1><img src=http://pic37.nipic.com/20140110/17563091_221827492154_2.jpg></li>
             <li id=photo2><img src=http://pic18.nipic.com/20120204/8339340_144203764154_2.jpg></li>
           </ul>
-          
+
           <div class=pswp id=imageviewer>
             <div class=pswp__bg></div>
             <div class=pswp__scroll-wrap>
