--- a/ctmobile-ui/html/Notification/index.html
+++ b/ctmobile-ui/html/Notification/index.html
@@ -4,7 +4,7 @@
   <meta charset=utf-8>
   <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no,minimal-ui,viewport-fit=cover">
   <title>ctmobile-ui-notification-demo</title>
-<link href=/playerljc.github.io/ctmobile-ui/html/Notification/vendors.css?b674840caa9316c7a97a rel=stylesheet><link href=/playerljc.github.io/ctmobile-ui/html/Notification/index.css?b674840caa9316c7a97a rel=stylesheet></head>
+<link href=/ctmobile-ui/html/Notification/vendors.css?b674840caa9316c7a97a rel=stylesheet><link href=/ctmobile-ui/html/Notification/index.css?b674840caa9316c7a97a rel=stylesheet></head>
 
 <body>
 
