--- a/ctmobile-ui/html/SidePanel/index.html
+++ b/ctmobile-ui/html/SidePanel/index.html
@@ -4,7 +4,7 @@
   <meta charset=utf-8>
   <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no,minimal-ui,viewport-fit=cover">
   <title>ctmobile-ui-sidepanel-demo</title>
-<link href=/playerljc.github.io/ctmobile-ui/html/SidePanel/runtime.css?400a72784c9f9b103a1c rel=stylesheet><link href=/playerljc.github.io/ctmobile-ui/html/SidePanel/index.css?400a72784c9f9b103a1c rel=stylesheet></head>
+<link href=/ctmobile-ui/html/SidePanel/runtime.css?400a72784c9f9b103a1c rel=stylesheet><link href=/ctmobile-ui/html/SidePanel/index.css?400a72784c9f9b103a1c rel=stylesheet></head>
 
 <body>
 
