--- a/ctmobile-ui/html/Tab/index.html
+++ b/ctmobile-ui/html/Tab/index.html
@@ -4,7 +4,7 @@
   <meta charset=utf-8>
   <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no,minimal-ui,viewport-fit=cover">
   <title>ctmobile-ui-tab-demo</title>
-<link href=/playerljc.github.io/ctmobile-ui/html/Tab/runtime.css?1b41bac080e6f7467f86 rel=stylesheet><link href=/playerljc.github.io/ctmobile-ui/html/Tab/index.css?1b41bac080e6f7467f86 rel=stylesheet></head>
+<link href=/ctmobile-ui/html/Tab/runtime.css?1b41bac080e6f7467f86 rel=stylesheet><link href=/ctmobile-ui/html/Tab/index.css?1b41bac080e6f7467f86 rel=stylesheet></head>
 
 <body>
 
