--- a/ctmobile-ui/html/Tree/index.html
+++ b/ctmobile-ui/html/Tree/index.html
@@ -4,7 +4,7 @@
   <meta charset=utf-8>
   <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no,minimal-ui,viewport-fit=cover">
   <title>ctmobile-ui-tree-demo</title>
-<link href=/playerljc.github.io/ctmobile-ui/html/Tree/index.css?1a383e8bc733f1135af9 rel=stylesheet></head>
+<link href=/ctmobile-ui/html/Tree/index.css?1a383e8bc733f1135af9 rel=stylesheet></head>
 <body>
 
 <div class=ctmobile-ui-doc>
