--- a/ctmobile-ui/html/Accordion/index.html
+++ b/ctmobile-ui/html/Accordion/index.html
@@ -4,7 +4,7 @@
   <meta charset=utf-8>
   <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no,minimal-ui,viewport-fit=cover">
   <title>ctmobile-ui-accordion-demo</title>
-<link href=/playerljc.github.io/ctmobile-ui/html/Accordion/vendors.css?7d36e3a3dcb01587c594 rel=stylesheet><link href=/playerljc.github.io/ctmobile-ui/html/Accordion/index.css?7d36e3a3dcb01587c594 rel=stylesheet></head>
+<link href=/ctmobile-ui/html/Accordion/vendors.css?7d36e3a3dcb01587c594 rel=stylesheet><link href=/ctmobile-ui/html/Accordion/index.css?7d36e3a3dcb01587c594 rel=stylesheet></head>
 
 <body>
 
