--- a/ctmobile-ui/html/BackTopAnimation/index.html
+++ b/ctmobile-ui/html/BackTopAnimation/index.html
@@ -4,7 +4,7 @@
   <meta charset=utf-8>
   <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no,minimal-ui,viewport-fit=cover">
   <title>ctmobile-ui-backtopanimation-demo</title>
-<link href=/playerljc.github.io/ctmobile-ui/html/BackTopAnimation/index.css?b66fbc49d1e3cdf5ac7a rel=stylesheet></head>
+<link href=/ctmobile-ui/html/BackTopAnimation/index.css?b66fbc49d1e3cdf5ac7a rel=stylesheet></head>
 
 <body>
 
