--- a/ctmobile-ui/html/DragLayout/index.html
+++ b/ctmobile-ui/html/DragLayout/index.html
@@ -4,7 +4,7 @@
   <meta charset=utf-8>
   <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no,minimal-ui,viewport-fit=cover">
   <title>ctmobile-ui-draglayout-demo</title>
-<link href=/playerljc.github.io/ctmobile-ui/html/DragLayout/vendors.css?079edd31cc23cee1b3ab rel=stylesheet><link href=/playerljc.github.io/ctmobile-ui/html/DragLayout/index.css?079edd31cc23cee1b3ab rel=stylesheet></head>
+<link href=/ctmobile-ui/html/DragLayout/vendors.css?079edd31cc23cee1b3ab rel=stylesheet><link href=/ctmobile-ui/html/DragLayout/index.css?079edd31cc23cee1b3ab rel=stylesheet></head>
 
 <body>
 
