--- a/ctmobile-ui/html/Form/index.html
+++ b/ctmobile-ui/html/Form/index.html
@@ -4,7 +4,7 @@
   <meta charset=utf-8>
   <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no,minimal-ui,viewport-fit=cover">
   <title>ctmobile-ui-form-demo</title>
-<link href=/playerljc.github.io/ctmobile-ui/html/Form/vendors.css?d8527cf297be3571ab90 rel=stylesheet><link href=/playerljc.github.io/ctmobile-ui/html/Form/index.css?d8527cf297be3571ab90 rel=stylesheet></head>
+<link href=/ctmobile-ui/html/Form/vendors.css?d8527cf297be3571ab90 rel=stylesheet><link href=/ctmobile-ui/html/Form/index.css?d8527cf297be3571ab90 rel=stylesheet></head>
 
 <body>
 
