--- a/ctmobile-ui/html/JdCategoryTab/index.html
+++ b/ctmobile-ui/html/JdCategoryTab/index.html
@@ -4,7 +4,7 @@
   <meta charset=utf-8>
   <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no,minimal-ui,viewport-fit=cover">
   <title>ctmobile-ui-jdcategorytab-demo</title>
-<link href=/playerljc.github.io/ctmobile-ui/html/JdCategoryTab/vendors.css?41616952c2f28bdee193 rel=stylesheet><link href=/playerljc.github.io/ctmobile-ui/html/JdCategoryTab/index.css?41616952c2f28bdee193 rel=stylesheet></head>
+<link href=/ctmobile-ui/html/JdCategoryTab/vendors.css?41616952c2f28bdee193 rel=stylesheet><link href=/ctmobile-ui/html/JdCategoryTab/index.css?41616952c2f28bdee193 rel=stylesheet></head>
 
 <body>
 
