--- a/ctmobile-ui/html/KwList/index.html
+++ b/ctmobile-ui/html/KwList/index.html
@@ -4,7 +4,7 @@
   <meta charset=utf-8>
   <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no,minimal-ui,viewport-fit=cover">
   <title>ctmobile-ui-kwlist-demo</title>
-<link href=/playerljc.github.io/ctmobile-ui/html/KwList/vendors.css?93b890c89d0bb11672cd rel=stylesheet><link href=/playerljc.github.io/ctmobile-ui/html/KwList/index.css?93b890c89d0bb11672cd rel=stylesheet></head>
+<link href=/ctmobile-ui/html/KwList/vendors.css?93b890c89d0bb11672cd rel=stylesheet><link href=/ctmobile-ui/html/KwList/index.css?93b890c89d0bb11672cd rel=stylesheet></head>
 
 <body>
 
