--- a/ctmobile-ui/html/ListView/index.html
+++ b/ctmobile-ui/html/ListView/index.html
@@ -4,7 +4,7 @@
   <meta charset=utf-8>
   <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no,minimal-ui,viewport-fit=cover">
   <title>ctmobile-ui-listview-demo</title>
-<link href=/playerljc.github.io/ctmobile-ui/html/ListView/vendors.css?f891b39751f83ee7255e rel=stylesheet><link href=/playerljc.github.io/ctmobile-ui/html/ListView/index.css?f891b39751f83ee7255e rel=stylesheet></head>
+<link href=/ctmobile-ui/html/ListView/vendors.css?f891b39751f83ee7255e rel=stylesheet><link href=/ctmobile-ui/html/ListView/index.css?f891b39751f83ee7255e rel=stylesheet></head>
 
 <body>
 
