--- a/ctmobile-ui/html/MessageDialog/index.html
+++ b/ctmobile-ui/html/MessageDialog/index.html
@@ -4,7 +4,7 @@
   <meta charset=utf-8>
   <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no,minimal-ui,viewport-fit=cover">
   <title>ctmobile-ui-messagedialog-demo</title>
-<link href=/playerljc.github.io/ctmobile-ui/html/MessageDialog/vendors.css?bd6bcc53efc01c8adbe3 rel=stylesheet><link href=/playerljc.github.io/ctmobile-ui/html/MessageDialog/index.css?bd6bcc53efc01c8adbe3 rel=stylesheet></head>
+<link href=/ctmobile-ui/html/MessageDialog/vendors.css?bd6bcc53efc01c8adbe3 rel=stylesheet><link href=/ctmobile-ui/html/MessageDialog/index.css?bd6bcc53efc01c8adbe3 rel=stylesheet></head>
 
 <body>
 
