--- a/ctmobile-ui/html/Revolving/index.html
+++ b/ctmobile-ui/html/Revolving/index.html
@@ -4,7 +4,7 @@
   <meta charset=utf-8>
   <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no,minimal-ui,viewport-fit=cover">
   <title>ctmobile-ui-revolving-demo</title>
-<link href=/playerljc.github.io/ctmobile-ui/html/Revolving/index.css?5589d80a634a23297233 rel=stylesheet></head>
+<link href=/ctmobile-ui/html/Revolving/index.css?5589d80a634a23297233 rel=stylesheet></head>
 
 <body>
 
