--- a/ctmobile-ui/html/StickupLayout/index.html
+++ b/ctmobile-ui/html/StickupLayout/index.html
@@ -4,7 +4,7 @@
   <meta charset=utf-8>
   <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no,minimal-ui,viewport-fit=cover">
   <title>ctmobile-ui-stickuplayout-demo</title>
-<link href=/playerljc.github.io/ctmobile-ui/html/StickupLayout/vendors.css?4fa47aa8cc3c65a24ef9 rel=stylesheet><link href=/playerljc.github.io/ctmobile-ui/html/StickupLayout/index.css?4fa47aa8cc3c65a24ef9 rel=stylesheet></head>
+<link href=/ctmobile-ui/html/StickupLayout/vendors.css?4fa47aa8cc3c65a24ef9 rel=stylesheet><link href=/ctmobile-ui/html/StickupLayout/index.css?4fa47aa8cc3c65a24ef9 rel=stylesheet></head>
 
 <body>
 
