--- a/ctmobile-ui/html/Swipeout/index.html
+++ b/ctmobile-ui/html/Swipeout/index.html
@@ -4,7 +4,7 @@
   <meta charset=utf-8>
   <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no,minimal-ui,viewport-fit=cover">
   <title>ctmobile-ui-swipeout-demo</title>
-<link href=/playerljc.github.io/ctmobile-ui/html/Swipeout/index.css?a46a5a9d2b3414d9192b rel=stylesheet></head>
+<link href=/ctmobile-ui/html/Swipeout/index.css?a46a5a9d2b3414d9192b rel=stylesheet></head>
 <body>
 
 <template id=template>
