--- a/ctmobile-ui/html/Accordion/index.html
+++ b/ctmobile-ui/html/Accordion/index.html
@@ -766,5 +766,5 @@
 </div>
 
 
-<script src=/playerljc.github.io/ctmobile-ui/html/Accordion/static\dll\commons.js?7d36e3a3dcb01587c594></script><script src=/playerljc.github.io/ctmobile-ui/html/Accordion/runtime.c0f3398759302b684aff.bundle.js?7d36e3a3dcb01587c594></script><script src=/playerljc.github.io/ctmobile-ui/html/Accordion/vendors.1cbe79171cf4b5428440.bundle.js?7d36e3a3dcb01587c594></script><script src=/playerljc.github.io/ctmobile-ui/html/Accordion/index.a27d51e545f74c0cda82.bundle.js?7d36e3a3dcb01587c594></script></body>
+<script src=/ctmobile-ui/html/Accordion/static\dll\commons.js?7d36e3a3dcb01587c594></script><script src=/ctmobile-ui/html/Accordion/runtime.c0f3398759302b684aff.bundle.js?7d36e3a3dcb01587c594></script><script src=/ctmobile-ui/html/Accordion/vendors.1cbe79171cf4b5428440.bundle.js?7d36e3a3dcb01587c594></script><script src=/ctmobile-ui/html/Accordion/index.a27d51e545f74c0cda82.bundle.js?7d36e3a3dcb01587c594></script></body>
 </html>
