--- a/ctmobile-ui/html/BackTopAnimation/index.html
+++ b/ctmobile-ui/html/BackTopAnimation/index.html
@@ -204,5 +204,5 @@ BackTop.on('scrollTop', () => {
   </pre>
 </div>
 
-<script src=/playerljc.github.io/ctmobile-ui/html/BackTopAnimation/static\dll\commons.js?b66fbc49d1e3cdf5ac7a></script><script src=/playerljc.github.io/ctmobile-ui/html/BackTopAnimation/runtime.79d85625ab5ea26bc4bd.bundle.js?b66fbc49d1e3cdf5ac7a></script><script src=/playerljc.github.io/ctmobile-ui/html/BackTopAnimation/vendors.b1f3655eb8365da05166.bundle.js?b66fbc49d1e3cdf5ac7a></script><script src=/playerljc.github.io/ctmobile-ui/html/BackTopAnimation/index.681a6207e5d828c05eb6.bundle.js?b66fbc49d1e3cdf5ac7a></script></body>
+<script src=/ctmobile-ui/html/BackTopAnimation/static\dll\commons.js?b66fbc49d1e3cdf5ac7a></script><script src=/ctmobile-ui/html/BackTopAnimation/runtime.79d85625ab5ea26bc4bd.bundle.js?b66fbc49d1e3cdf5ac7a></script><script src=/ctmobile-ui/html/BackTopAnimation/vendors.b1f3655eb8365da05166.bundle.js?b66fbc49d1e3cdf5ac7a></script><script src=/ctmobile-ui/html/BackTopAnimation/index.681a6207e5d828c05eb6.bundle.js?b66fbc49d1e3cdf5ac7a></script></body>
 </html>
