--- a/ctmobile-ui/html/CascadeCompared/index.html
+++ b/ctmobile-ui/html/CascadeCompared/index.html
@@ -825,5 +825,5 @@
   </code>
   </pre>
 </div>
-<script src=/playerljc.github.io/ctmobile-ui/html/CascadeCompared/static\dll\commons.js?21066cf4e1f0cd15b620></script><script src=/playerljc.github.io/ctmobile-ui/html/CascadeCompared/runtime.91d4ab8e9a40c9e19a54.bundle.js?21066cf4e1f0cd15b620></script><script src=/playerljc.github.io/ctmobile-ui/html/CascadeCompared/vendors.58ddda7ecaea679ec701.bundle.js?21066cf4e1f0cd15b620></script><script src=/playerljc.github.io/ctmobile-ui/html/CascadeCompared/index.c7281335b1ea6d1bcded.bundle.js?21066cf4e1f0cd15b620></script></body>
+<script src=/ctmobile-ui/html/CascadeCompared/static\dll\commons.js?21066cf4e1f0cd15b620></script><script src=/ctmobile-ui/html/CascadeCompared/runtime.91d4ab8e9a40c9e19a54.bundle.js?21066cf4e1f0cd15b620></script><script src=/ctmobile-ui/html/CascadeCompared/vendors.58ddda7ecaea679ec701.bundle.js?21066cf4e1f0cd15b620></script><script src=/ctmobile-ui/html/CascadeCompared/index.c7281335b1ea6d1bcded.bundle.js?21066cf4e1f0cd15b620></script></body>
 </html>
