--- a/ctmobile-ui/html/DragLayout/index.html
+++ b/ctmobile-ui/html/DragLayout/index.html
@@ -128,5 +128,5 @@
 </div>
 
 
-<script src=/playerljc.github.io/ctmobile-ui/html/DragLayout/static\dll\commons.js?079edd31cc23cee1b3ab></script><script src=/playerljc.github.io/ctmobile-ui/html/DragLayout/runtime.ab84ee816a0a5f39af0a.bundle.js?079edd31cc23cee1b3ab></script><script src=/playerljc.github.io/ctmobile-ui/html/DragLayout/vendors.5bed46cf69c4f36b3da0.bundle.js?079edd31cc23cee1b3ab></script><script src=/playerljc.github.io/ctmobile-ui/html/DragLayout/index.8899e3b4b8a727b95cc6.bundle.js?079edd31cc23cee1b3ab></script></body>
+<script src=/ctmobile-ui/html/DragLayout/static\dll\commons.js?079edd31cc23cee1b3ab></script><script src=/ctmobile-ui/html/DragLayout/runtime.ab84ee816a0a5f39af0a.bundle.js?079edd31cc23cee1b3ab></script><script src=/ctmobile-ui/html/DragLayout/vendors.5bed46cf69c4f36b3da0.bundle.js?079edd31cc23cee1b3ab></script><script src=/ctmobile-ui/html/DragLayout/index.8899e3b4b8a727b95cc6.bundle.js?079edd31cc23cee1b3ab></script></body>
 </html>
