--- a/ctmobile-ui/html/FontSizeSetting/index.html
+++ b/ctmobile-ui/html/FontSizeSetting/index.html
@@ -225,5 +225,5 @@
 
 </div>
 
-<script src=/playerljc.github.io/ctmobile-ui/html/FontSizeSetting/static\dll\commons.js?815236607aeb36c6fede></script><script src=/playerljc.github.io/ctmobile-ui/html/FontSizeSetting/runtime.9f6959bde1a890b1be13.bundle.js?815236607aeb36c6fede></script><script src=/playerljc.github.io/ctmobile-ui/html/FontSizeSetting/vendors.ca488b7fd604813d0432.bundle.js?815236607aeb36c6fede></script><script src=/playerljc.github.io/ctmobile-ui/html/FontSizeSetting/index.7dde8d14dabbae60b600.bundle.js?815236607aeb36c6fede></script></body>
+<script src=/ctmobile-ui/html/FontSizeSetting/static\dll\commons.js?815236607aeb36c6fede></script><script src=/ctmobile-ui/html/FontSizeSetting/runtime.9f6959bde1a890b1be13.bundle.js?815236607aeb36c6fede></script><script src=/ctmobile-ui/html/FontSizeSetting/vendors.ca488b7fd604813d0432.bundle.js?815236607aeb36c6fede></script><script src=/ctmobile-ui/html/FontSizeSetting/index.7dde8d14dabbae60b600.bundle.js?815236607aeb36c6fede></script></body>
 </html>
