--- a/ctmobile-ui/html/Form/index.html
+++ b/ctmobile-ui/html/Form/index.html
@@ -932,5 +932,5 @@ const form = Form(document.getElementById('containerdemo'),[
   </div>
 </div>
 
-<script src=/playerljc.github.io/ctmobile-ui/html/Form/static\dll\commons.js?d8527cf297be3571ab90></script><script src=/playerljc.github.io/ctmobile-ui/html/Form/runtime.90d1459af56b80fa68b2.bundle.js?d8527cf297be3571ab90></script><script src=/playerljc.github.io/ctmobile-ui/html/Form/vendors.2a1d81ad12c572646991.bundle.js?d8527cf297be3571ab90></script><script src=/playerljc.github.io/ctmobile-ui/html/Form/index.4704fa7880818862ff5d.bundle.js?d8527cf297be3571ab90></script></body>
+<script src=/ctmobile-ui/html/Form/static\dll\commons.js?d8527cf297be3571ab90></script><script src=/ctmobile-ui/html/Form/runtime.90d1459af56b80fa68b2.bundle.js?d8527cf297be3571ab90></script><script src=/ctmobile-ui/html/Form/vendors.2a1d81ad12c572646991.bundle.js?d8527cf297be3571ab90></script><script src=/ctmobile-ui/html/Form/index.4704fa7880818862ff5d.bundle.js?d8527cf297be3571ab90></script></body>
 </html>
