--- a/ctmobile-ui/html/ImageViewer/index.html
+++ b/ctmobile-ui/html/ImageViewer/index.html
@@ -189,5 +189,5 @@ document.getElementById('photo2').addEventListener('click', () => {
 
 </div>
 
-<script src=/playerljc.github.io/ctmobile-ui/html/ImageViewer/static\dll\commons.js?e8eae1c5bac944de9962></script><script src=/playerljc.github.io/ctmobile-ui/html/ImageViewer/runtime.d26ffd1780ae09166310.bundle.js?e8eae1c5bac944de9962></script><script src=/playerljc.github.io/ctmobile-ui/html/ImageViewer/vendors.7a4eb85060e26f221eb4.bundle.js?e8eae1c5bac944de9962></script><script src=/playerljc.github.io/ctmobile-ui/html/ImageViewer/index.04d6efc00d6f1cf359e5.bundle.js?e8eae1c5bac944de9962></script></body>
+<script src=/ctmobile-ui/html/ImageViewer/static\dll\commons.js?e8eae1c5bac944de9962></script><script src=/ctmobile-ui/html/ImageViewer/runtime.d26ffd1780ae09166310.bundle.js?e8eae1c5bac944de9962></script><script src=/ctmobile-ui/html/ImageViewer/vendors.7a4eb85060e26f221eb4.bundle.js?e8eae1c5bac944de9962></script><script src=/ctmobile-ui/html/ImageViewer/index.04d6efc00d6f1cf359e5.bundle.js?e8eae1c5bac944de9962></script></body>
 </html>
