--- a/ctmobile-ui/html/KwList/index.html
+++ b/ctmobile-ui/html/KwList/index.html
@@ -433,5 +433,5 @@ kwlist.on('hide',() => {
 </div>
 
 
-<script src=/playerljc.github.io/ctmobile-ui/html/KwList/static\dll\commons.js?93b890c89d0bb11672cd></script><script src=/playerljc.github.io/ctmobile-ui/html/KwList/runtime.9f05b173289eaaf01a4f.bundle.js?93b890c89d0bb11672cd></script><script src=/playerljc.github.io/ctmobile-ui/html/KwList/vendors.4ec6290bf82c87d36661.bundle.js?93b890c89d0bb11672cd></script><script src=/playerljc.github.io/ctmobile-ui/html/KwList/index.b730fc9eca97ab0c2b99.bundle.js?93b890c89d0bb11672cd></script></body>
+<script src=/ctmobile-ui/html/KwList/static\dll\commons.js?93b890c89d0bb11672cd></script><script src=/ctmobile-ui/html/KwList/runtime.9f05b173289eaaf01a4f.bundle.js?93b890c89d0bb11672cd></script><script src=/ctmobile-ui/html/KwList/vendors.4ec6290bf82c87d36661.bundle.js?93b890c89d0bb11672cd></script><script src=/ctmobile-ui/html/KwList/index.b730fc9eca97ab0c2b99.bundle.js?93b890c89d0bb11672cd></script></body>
 </html>
