--- a/ctmobile-ui/html/MessageDialog/index.html
+++ b/ctmobile-ui/html/MessageDialog/index.html
@@ -1392,5 +1392,5 @@ $parent.find('.determined')[0].addEventListener('click', () => {
 </div>
 
 
-<script src=/playerljc.github.io/ctmobile-ui/html/MessageDialog/static\dll\commons.js?bd6bcc53efc01c8adbe3></script><script src=/playerljc.github.io/ctmobile-ui/html/MessageDialog/runtime.6e81b1750240a7907c82.bundle.js?bd6bcc53efc01c8adbe3></script><script src=/playerljc.github.io/ctmobile-ui/html/MessageDialog/vendors.3e65babae977327c886c.bundle.js?bd6bcc53efc01c8adbe3></script><script src=/playerljc.github.io/ctmobile-ui/html/MessageDialog/index.96cbcf682ba127d21e80.bundle.js?bd6bcc53efc01c8adbe3></script></body>
+<script src=/ctmobile-ui/html/MessageDialog/static\dll\commons.js?bd6bcc53efc01c8adbe3></script><script src=/ctmobile-ui/html/MessageDialog/runtime.6e81b1750240a7907c82.bundle.js?bd6bcc53efc01c8adbe3></script><script src=/ctmobile-ui/html/MessageDialog/vendors.3e65babae977327c886c.bundle.js?bd6bcc53efc01c8adbe3></script><script src=/ctmobile-ui/html/MessageDialog/index.96cbcf682ba127d21e80.bundle.js?bd6bcc53efc01c8adbe3></script></body>
 </html>
