--- a/ctmobile-ui/html/Notification/index.html
+++ b/ctmobile-ui/html/Notification/index.html
@@ -1713,5 +1713,5 @@ const n = Notification(
 
 </div>
 
-<script src=/playerljc.github.io/ctmobile-ui/html/Notification/static\dll\commons.js?b674840caa9316c7a97a></script><script src=/playerljc.github.io/ctmobile-ui/html/Notification/runtime.16345b02128c29b6415a.bundle.js?b674840caa9316c7a97a></script><script src=/playerljc.github.io/ctmobile-ui/html/Notification/vendors.d17050d87d2af510e949.bundle.js?b674840caa9316c7a97a></script><script src=/playerljc.github.io/ctmobile-ui/html/Notification/index.4b54fa06501a18e66a96.bundle.js?b674840caa9316c7a97a></script></body>
+<script src=/ctmobile-ui/html/Notification/static\dll\commons.js?b674840caa9316c7a97a></script><script src=/ctmobile-ui/html/Notification/runtime.16345b02128c29b6415a.bundle.js?b674840caa9316c7a97a></script><script src=/ctmobile-ui/html/Notification/vendors.d17050d87d2af510e949.bundle.js?b674840caa9316c7a97a></script><script src=/ctmobile-ui/html/Notification/index.4b54fa06501a18e66a96.bundle.js?b674840caa9316c7a97a></script></body>
 </html>
