--- a/ctmobile-ui/html/Popup/index.html
+++ b/ctmobile-ui/html/Popup/index.html
@@ -993,5 +993,5 @@ document.body.addEventListener('ct-popup-event-distory', (el) => {
 </div>
 
 
-<script src=/playerljc.github.io/ctmobile-ui/html/Popup/static\dll\commons.js?2ac9d89a46131f6448d0></script><script src=/playerljc.github.io/ctmobile-ui/html/Popup/runtime.5a3e8bb7f7434293c999.bundle.js?2ac9d89a46131f6448d0></script><script src=/playerljc.github.io/ctmobile-ui/html/Popup/vendors.a9772bd2d61e2638fdea.bundle.js?2ac9d89a46131f6448d0></script><script src=/playerljc.github.io/ctmobile-ui/html/Popup/index.681072624c770d1d0dad.bundle.js?2ac9d89a46131f6448d0></script></body>
+<script src=/ctmobile-ui/html/Popup/static\dll\commons.js?2ac9d89a46131f6448d0></script><script src=/ctmobile-ui/html/Popup/runtime.5a3e8bb7f7434293c999.bundle.js?2ac9d89a46131f6448d0></script><script src=/ctmobile-ui/html/Popup/vendors.a9772bd2d61e2638fdea.bundle.js?2ac9d89a46131f6448d0></script><script src=/ctmobile-ui/html/Popup/index.681072624c770d1d0dad.bundle.js?2ac9d89a46131f6448d0></script></body>
 </html>
