--- a/ctmobile-ui/html/Revolving/index.html
+++ b/ctmobile-ui/html/Revolving/index.html
@@ -561,5 +561,5 @@ revolving.on('autoplay', () => { console.log('autoplay'); });
   </pre>
 </div>
 
-<script src=/playerljc.github.io/ctmobile-ui/html/Revolving/static\dll\commons.js?5589d80a634a23297233></script><script src=/playerljc.github.io/ctmobile-ui/html/Revolving/runtime.afa6856b4020a87f9e5f.bundle.js?5589d80a634a23297233></script><script src=/playerljc.github.io/ctmobile-ui/html/Revolving/vendors.6816418870058bbced69.bundle.js?5589d80a634a23297233></script><script src=/playerljc.github.io/ctmobile-ui/html/Revolving/index.e80c888d17387cb9d59c.bundle.js?5589d80a634a23297233></script></body>
+<script src=/ctmobile-ui/html/Revolving/static\dll\commons.js?5589d80a634a23297233></script><script src=/ctmobile-ui/html/Revolving/runtime.afa6856b4020a87f9e5f.bundle.js?5589d80a634a23297233></script><script src=/ctmobile-ui/html/Revolving/vendors.6816418870058bbced69.bundle.js?5589d80a634a23297233></script><script src=/ctmobile-ui/html/Revolving/index.e80c888d17387cb9d59c.bundle.js?5589d80a634a23297233></script></body>
 </html>
