--- a/ctmobile-ui/html/ScrollLoad/index.html
+++ b/ctmobile-ui/html/ScrollLoad/index.html
@@ -362,5 +362,5 @@ scrollLoad.on('errorclick', () => {
   </pre>
 </div>
 
-<script src=/playerljc.github.io/ctmobile-ui/html/ScrollLoad/static\dll\commons.js?b0cfbe74528b008c45f2></script><script src=/playerljc.github.io/ctmobile-ui/html/ScrollLoad/runtime.3cc000c18b56aab632f5.bundle.js?b0cfbe74528b008c45f2></script><script src=/playerljc.github.io/ctmobile-ui/html/ScrollLoad/vendors.65a97e88379fbfd6a424.bundle.js?b0cfbe74528b008c45f2></script><script src=/playerljc.github.io/ctmobile-ui/html/ScrollLoad/index.71be3e8306c95aef9b71.bundle.js?b0cfbe74528b008c45f2></script></body>
+<script src=/ctmobile-ui/html/ScrollLoad/static\dll\commons.js?b0cfbe74528b008c45f2></script><script src=/ctmobile-ui/html/ScrollLoad/runtime.3cc000c18b56aab632f5.bundle.js?b0cfbe74528b008c45f2></script><script src=/ctmobile-ui/html/ScrollLoad/vendors.65a97e88379fbfd6a424.bundle.js?b0cfbe74528b008c45f2></script><script src=/ctmobile-ui/html/ScrollLoad/index.71be3e8306c95aef9b71.bundle.js?b0cfbe74528b008c45f2></script></body>
 </html>
