--- a/ctmobile-ui/html/StickupLayout/index.html
+++ b/ctmobile-ui/html/StickupLayout/index.html
@@ -2919,5 +2919,5 @@
 </div>
 
 
-<script src=/playerljc.github.io/ctmobile-ui/html/StickupLayout/static\dll\commons.js?4fa47aa8cc3c65a24ef9></script><script src=/playerljc.github.io/ctmobile-ui/html/StickupLayout/runtime.e328d0f8d6f05e14e99e.bundle.js?4fa47aa8cc3c65a24ef9></script><script src=/playerljc.github.io/ctmobile-ui/html/StickupLayout/vendors.5e3607b1c07314a2c054.bundle.js?4fa47aa8cc3c65a24ef9></script><script src=/playerljc.github.io/ctmobile-ui/html/StickupLayout/index.2d29b81bfb3e6ae23fb1.bundle.js?4fa47aa8cc3c65a24ef9></script></body>
+<script src=/ctmobile-ui/html/StickupLayout/static\dll\commons.js?4fa47aa8cc3c65a24ef9></script><script src=/ctmobile-ui/html/StickupLayout/runtime.e328d0f8d6f05e14e99e.bundle.js?4fa47aa8cc3c65a24ef9></script><script src=/ctmobile-ui/html/StickupLayout/vendors.5e3607b1c07314a2c054.bundle.js?4fa47aa8cc3c65a24ef9></script><script src=/ctmobile-ui/html/StickupLayout/index.2d29b81bfb3e6ae23fb1.bundle.js?4fa47aa8cc3c65a24ef9></script></body>
 </html>
