--- a/ctmobile-ui/html/Surnames/index.html
+++ b/ctmobile-ui/html/Surnames/index.html
@@ -375,5 +375,5 @@
 </pre>
 </div>
 
-<script src=/playerljc.github.io/ctmobile-ui/html/Surnames/static\dll\commons.js?d147395118256666c6f8></script><script src=/playerljc.github.io/ctmobile-ui/html/Surnames/runtime.d5389db32a76daeb93d8.bundle.js?d147395118256666c6f8></script><script src=/playerljc.github.io/ctmobile-ui/html/Surnames/vendors.e9c4d9652356962bb932.bundle.js?d147395118256666c6f8></script><script src=/playerljc.github.io/ctmobile-ui/html/Surnames/index.f72f6083f9f2459f198f.bundle.js?d147395118256666c6f8></script></body>
+<script src=/ctmobile-ui/html/Surnames/static\dll\commons.js?d147395118256666c6f8></script><script src=/ctmobile-ui/html/Surnames/runtime.d5389db32a76daeb93d8.bundle.js?d147395118256666c6f8></script><script src=/ctmobile-ui/html/Surnames/vendors.e9c4d9652356962bb932.bundle.js?d147395118256666c6f8></script><script src=/ctmobile-ui/html/Surnames/index.f72f6083f9f2459f198f.bundle.js?d147395118256666c6f8></script></body>
 </html>
