--- a/ctmobile-ui/html/Swipeout/index.html
+++ b/ctmobile-ui/html/Swipeout/index.html
@@ -575,5 +575,5 @@ document.getElementById('addBtn').addEventListener('click', () => {const insertE
   </table>
 </div>
 
-<script src=/playerljc.github.io/ctmobile-ui/html/Swipeout/static\dll\commons.js?a46a5a9d2b3414d9192b></script><script src=/playerljc.github.io/ctmobile-ui/html/Swipeout/runtime.04e3b07baac3e3bcb8f0.bundle.js?a46a5a9d2b3414d9192b></script><script src=/playerljc.github.io/ctmobile-ui/html/Swipeout/vendors.e36b4a8af0f200b4a1f0.bundle.js?a46a5a9d2b3414d9192b></script><script src=/playerljc.github.io/ctmobile-ui/html/Swipeout/index.6cfab640f9f1089f0775.bundle.js?a46a5a9d2b3414d9192b></script></body>
+<script src=/ctmobile-ui/html/Swipeout/static\dll\commons.js?a46a5a9d2b3414d9192b></script><script src=/ctmobile-ui/html/Swipeout/runtime.04e3b07baac3e3bcb8f0.bundle.js?a46a5a9d2b3414d9192b></script><script src=/ctmobile-ui/html/Swipeout/vendors.e36b4a8af0f200b4a1f0.bundle.js?a46a5a9d2b3414d9192b></script><script src=/ctmobile-ui/html/Swipeout/index.6cfab640f9f1089f0775.bundle.js?a46a5a9d2b3414d9192b></script></body>
 </html>
