--- a/ctmobile-ui/html/Tab/index.html
+++ b/ctmobile-ui/html/Tab/index.html
@@ -344,5 +344,5 @@
 
 </div>
 
-<script src=/playerljc.github.io/ctmobile-ui/html/Tab/static\dll\commons.js?1b41bac080e6f7467f86></script><script src=/playerljc.github.io/ctmobile-ui/html/Tab/runtime.1053fadc8a5224b0b725.bundle.js?1b41bac080e6f7467f86></script><script src=/playerljc.github.io/ctmobile-ui/html/Tab/vendors.7ba6991e254548b75a86.bundle.js?1b41bac080e6f7467f86></script><script src=/playerljc.github.io/ctmobile-ui/html/Tab/index.2186e0642fbf8e86b47f.bundle.js?1b41bac080e6f7467f86></script></body>
+<script src=/ctmobile-ui/html/Tab/static\dll\commons.js?1b41bac080e6f7467f86></script><script src=/ctmobile-ui/html/Tab/runtime.1053fadc8a5224b0b725.bundle.js?1b41bac080e6f7467f86></script><script src=/ctmobile-ui/html/Tab/vendors.7ba6991e254548b75a86.bundle.js?1b41bac080e6f7467f86></script><script src=/ctmobile-ui/html/Tab/index.2186e0642fbf8e86b47f.bundle.js?1b41bac080e6f7467f86></script></body>
 </html>
