--- a/ctmobile-ui/html/Tree/index.html
+++ b/ctmobile-ui/html/Tree/index.html
@@ -1434,5 +1434,5 @@ TreeFactory.create(document.getElementById('tree-click'), {
   </table>
 </div>
 
-<script src=/playerljc.github.io/ctmobile-ui/html/Tree/static\dll\commons.js?1a383e8bc733f1135af9></script><script src=/playerljc.github.io/ctmobile-ui/html/Tree/runtime.3d7bd2c0a00b4cd14178.bundle.js?1a383e8bc733f1135af9></script><script src=/playerljc.github.io/ctmobile-ui/html/Tree/vendors.a016d3efcd716c00d281.bundle.js?1a383e8bc733f1135af9></script><script src=/playerljc.github.io/ctmobile-ui/html/Tree/index.35bbd8e6e63995b9147a.bundle.js?1a383e8bc733f1135af9></script></body>
+<script src=/ctmobile-ui/html/Tree/static\dll\commons.js?1a383e8bc733f1135af9></script><script src=/ctmobile-ui/html/Tree/runtime.3d7bd2c0a00b4cd14178.bundle.js?1a383e8bc733f1135af9></script><script src=/ctmobile-ui/html/Tree/vendors.a016d3efcd716c00d281.bundle.js?1a383e8bc733f1135af9></script><script src=/ctmobile-ui/html/Tree/index.35bbd8e6e63995b9147a.bundle.js?1a383e8bc733f1135af9></script></body>
 </html>
