--- a/ctmobile-ui/html/JdCategoryTab/index.html
+++ b/ctmobile-ui/html/JdCategoryTab/index.html
@@ -350,5 +350,5 @@ window.onload = () => {
 
 </div>
 
-<script src=/playerljc.github.io/ctmobile-ui/html/JdCategoryTab/static\dll\commons.js?41616952c2f28bdee193></script><script src=/playerljc.github.io/ctmobile-ui/html/JdCategoryTab/runtime.6ce5f2d39c690d7669aa.bundle.js?41616952c2f28bdee193></script><script src=/playerljc.github.io/ctmobile-ui/html/JdCategoryTab/vendors.9f6f5c5809c98719b8b2.bundle.js?41616952c2f28bdee193></script><script src=/playerljc.github.io/ctmobile-ui/html/JdCategoryTab/index.409c4bcf3a59c9cb8916.bundle.js?41616952c2f28bdee193></script></body>
+<script src=/ctmobile-ui/html/JdCategoryTab/static\dll\commons.js?41616952c2f28bdee193></script><script src=/ctmobile-ui/html/JdCategoryTab/runtime.6ce5f2d39c690d7669aa.bundle.js?41616952c2f28bdee193></script><script src=/ctmobile-ui/html/JdCategoryTab/vendors.9f6f5c5809c98719b8b2.bundle.js?41616952c2f28bdee193></script><script src=/ctmobile-ui/html/JdCategoryTab/index.409c4bcf3a59c9cb8916.bundle.js?41616952c2f28bdee193></script></body>
 </html>
