--- a/ctmobile-ui/html/PullRefresh/index.html
+++ b/ctmobile-ui/html/PullRefresh/index.html
@@ -529,5 +529,5 @@ pullRefresh.on('pullRefresh', (ins) => {
 </div>
 
 
-<script src=/playerljc.github.io/ctmobile-ui/html/PullRefresh/static\dll\commons.js?222e54073fbe7df07dca></script><script src=/playerljc.github.io/ctmobile-ui/html/PullRefresh/runtime.138099c54747ed3440eb.bundle.js?222e54073fbe7df07dca></script><script src=/playerljc.github.io/ctmobile-ui/html/PullRefresh/vendors.edda2d3df670a40e1b64.bundle.js?222e54073fbe7df07dca></script><script src=/playerljc.github.io/ctmobile-ui/html/PullRefresh/index.9670699cecfd18ad5da9.bundle.js?222e54073fbe7df07dca></script></body>
+<script src=/ctmobile-ui/html/PullRefresh/static\dll\commons.js?222e54073fbe7df07dca></script><script src=/ctmobile-ui/html/PullRefresh/runtime.138099c54747ed3440eb.bundle.js?222e54073fbe7df07dca></script><script src=/ctmobile-ui/html/PullRefresh/vendors.edda2d3df670a40e1b64.bundle.js?222e54073fbe7df07dca></script><script src=/ctmobile-ui/html/PullRefresh/index.9670699cecfd18ad5da9.bundle.js?222e54073fbe7df07dca></script></body>
 </html>
