--- a/ctmobile-ui/html/SidePanel/index.html
+++ b/ctmobile-ui/html/SidePanel/index.html
@@ -338,5 +338,5 @@ this.leftPanel.show();
   </pre>
 </div>
 
-<script src=/playerljc.github.io/ctmobile-ui/html/SidePanel/static\dll\commons.js?400a72784c9f9b103a1c></script><script src=/playerljc.github.io/ctmobile-ui/html/SidePanel/runtime.38f87d2ea24945a4ab0c.bundle.js?400a72784c9f9b103a1c></script><script src=/playerljc.github.io/ctmobile-ui/html/SidePanel/vendors.9bd52c3429be3b450ae7.bundle.js?400a72784c9f9b103a1c></script><script src=/playerljc.github.io/ctmobile-ui/html/SidePanel/index.4609fa2757a044b431ba.bundle.js?400a72784c9f9b103a1c></script></body>
+<script src=/ctmobile-ui/html/SidePanel/static\dll\commons.js?400a72784c9f9b103a1c></script><script src=/ctmobile-ui/html/SidePanel/runtime.38f87d2ea24945a4ab0c.bundle.js?400a72784c9f9b103a1c></script><script src=/ctmobile-ui/html/SidePanel/vendors.9bd52c3429be3b450ae7.bundle.js?400a72784c9f9b103a1c></script><script src=/ctmobile-ui/html/SidePanel/index.4609fa2757a044b431ba.bundle.js?400a72784c9f9b103a1c></script></body>
 </html>
