--- a/ctmobile-ui/html/SliderScale/index.html
+++ b/ctmobile-ui/html/SliderScale/index.html
@@ -311,5 +311,5 @@ document.getElementById('controlS3').addEventListener('change', (e) => {
 </pre>
 </div>
 
-<script src=/playerljc.github.io/ctmobile-ui/html/SliderScale/static\dll\commons.js?b3b342710ff8d9ea32ac></script><script src=/playerljc.github.io/ctmobile-ui/html/SliderScale/runtime.290085f0cad05c84fa56.bundle.js?b3b342710ff8d9ea32ac></script><script src=/playerljc.github.io/ctmobile-ui/html/SliderScale/vendors.e6e504b0ffd614c86079.bundle.js?b3b342710ff8d9ea32ac></script><script src=/playerljc.github.io/ctmobile-ui/html/SliderScale/index.92d98faf5ef7295bfe9a.bundle.js?b3b342710ff8d9ea32ac></script></body>
+<script src=/ctmobile-ui/html/SliderScale/static\dll\commons.js?b3b342710ff8d9ea32ac></script><script src=/ctmobile-ui/html/SliderScale/runtime.290085f0cad05c84fa56.bundle.js?b3b342710ff8d9ea32ac></script><script src=/ctmobile-ui/html/SliderScale/vendors.e6e504b0ffd614c86079.bundle.js?b3b342710ff8d9ea32ac></script><script src=/ctmobile-ui/html/SliderScale/index.92d98faf5ef7295bfe9a.bundle.js?b3b342710ff8d9ea32ac></script></body>
 </html>
