--- a/adhere/index.html
+++ b/adhere/index.html
@@ -8,7 +8,7 @@
 
     <!--<link rel="stylesheet" href="/assets/codemirror.min.css" />
     <link rel="stylesheet" href="/assets/monokai.min.css" />-->
-    <script src="http://api.map.baidu.com/api?v=3.0&ak=bxFuXXDt1oKdlgu6mXCCnK51cDgDGBLp" type=text/javascript></script>
+    <script src="https://api.map.baidu.com/api?v=3.0&ak=bxFuXXDt1oKdlgu6mXCCnK51cDgDGBLp" type=text/javascript></script>
     <!--    <script src="/assets/lib/Heatmap_min.js"></script>-->
     <!--TODO:umd umd的时候需要打开-->
     <!--
